{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 568,
  "lineage": "2cc3bf49-7e50-ed3d-2242-ef3760f4f452",
  "resources": [
    {
      "module": "module.eip_nat_gateway_1b",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-557fc08f",
            "domain": "vpc",
            "id": "eipalloc-0b581530b10e65dc9",
            "network_interface": "eni-0d13bb5f971ec4311",
            "private_dns": "ip-10-0-101-70.eu-central-1.compute.internal",
            "private_ip": "10.0.101.70",
            "public_dns": "ec2-18-156-149-255.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.149.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-eip-nat-gateway-1b",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_nat_gateway_1a",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-aba93266",
            "domain": "vpc",
            "id": "eipalloc-085e4225a01943b83",
            "network_interface": "eni-05a30b9fb9b19573d",
            "private_dns": "ip-10-0-59-161.eu-central-1.compute.internal",
            "private_ip": "10.0.59.161",
            "public_dns": "ec2-3-123-148-37.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.148.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-eip-nat-gateway-1a",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c93f1b8c11e2a700",
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-internet-gateway",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider.aws.services",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:loadbalancer/app/rabbitmq-alb/ba27e252406688be",
            "arn_suffix": "app/rabbitmq-alb/ba27e252406688be",
            "dns_name": "rabbitmq-alb-1527187311.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:loadbalancer/app/rabbitmq-alb/ba27e252406688be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rabbitmq-alb",
            "security_groups": [
              "sg-000424855aee6b72f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07bc2aeb8127a9575"
              },
              {
                "subnet_id": "subnet-07e4b3998eec84571"
              }
            ],
            "subnets": [
              "subnet-07bc2aeb8127a9575",
              "subnet-07e4b3998eec84571"
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-alb",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_group_alb.aws_security_group.security_group",
            "module.vpc_subnet_public_1a.aws_subnet.subnet",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider.aws.services",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:listener/app/rabbitmq-alb/ba27e252406688be/b00ce46c6188ec77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:targetgroup/rabbitmq-alb-tg/ddd9f30b9a844171",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:listener/app/rabbitmq-alb/ba27e252406688be/b00ce46c6188ec77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:loadbalancer/app/rabbitmq-alb/ba27e252406688be",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.lb",
            "module.alb_target_group.aws_lb_target_group.lb_target_group",
            "module.security_group_alb.aws_security_group.security_group",
            "module.vpc_subnet_public_1a.aws_subnet.subnet",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider.aws.services",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:targetgroup/rabbitmq-alb-tg/ddd9f30b9a844171",
            "arn_suffix": "targetgroup/rabbitmq-alb-tg/ddd9f30b9a844171",
            "deregistration_delay": 0,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:074912011001:targetgroup/rabbitmq-alb-tg/ddd9f30b9a844171",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rabbitmq-alb-tg",
            "port": 15672,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-alb-tg",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "target_type": "instance",
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_nat_gateway_private_1b",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b581530b10e65dc9",
            "id": "nat-0be775624c8ba6f60",
            "network_interface_id": "eni-0d13bb5f971ec4311",
            "private_ip": "10.0.101.70",
            "public_ip": "18.156.149.255",
            "subnet_id": "subnet-07bc2aeb8127a9575",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-internet-gateway",
              "Owner": "Platform Team",
              "Project": "POC"
            }
          },
          "dependencies": [
            "module.eip_nat_gateway_1b.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_nat_gateway_private_1a",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085e4225a01943b83",
            "id": "nat-0c77cdabbb258e264",
            "network_interface_id": "eni-05a30b9fb9b19573d",
            "private_ip": "10.0.59.161",
            "public_ip": "3.123.148.37",
            "subnet_id": "subnet-07e4b3998eec84571",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-internet-gateway",
              "Owner": "Platform Team",
              "Project": "POC"
            }
          },
          "dependencies": [
            "module.eip_nat_gateway_1a.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_subnet_public_1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0887ee566050cf730",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "074912011001",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0764fa88e3791e8ae",
              "subnet-07bc2aeb8127a9575",
              "subnet-07e4b3998eec84571",
              "subnet-0f738b73821a022a0"
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-network-acl",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc_subnet_private_1a.aws_subnet.subnet",
            "module.vpc_subnet_private_1b.aws_subnet.subnet",
            "module.vpc_subnet_public_1a.aws_subnet.subnet",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_route_table_private_1a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a5bf99917771b2fe",
            "owner_id": "074912011001",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c77cdabbb258e264",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-route-table-private-1a",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.eip_nat_gateway_1a.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_nat_gateway_private_1a.aws_nat_gateway.nat_gateway",
            "module.vpc_subnet_public_1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_route_table_private_1b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06a4b8546fb133a26",
            "owner_id": "074912011001",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0be775624c8ba6f60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-route-table-private-1b",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.eip_nat_gateway_1b.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_nat_gateway_private_1b.aws_nat_gateway.nat_gateway",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-078a038ca3de4eaa4",
            "owner_id": "074912011001",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c93f1b8c11e2a700",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc-route-table-public",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc_internet_gateway.aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bafff6073a56e68f",
            "route_table_id": "rtb-078a038ca3de4eaa4",
            "subnet_id": "subnet-07e4b3998eec84571"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc_internet_gateway.aws_internet_gateway.internet_gateway",
            "module.vpc_route_table_public.aws_route_table.route_table",
            "module.vpc_subnet_public_1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038d2e81108504fdf",
            "route_table_id": "rtb-06a4b8546fb133a26",
            "subnet_id": "subnet-0f738b73821a022a0"
          },
          "dependencies": [
            "module.eip_nat_gateway_1b.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_nat_gateway_private_1b.aws_nat_gateway.nat_gateway",
            "module.vpc_route_table_private_1b.aws_route_table.route_table",
            "module.vpc_subnet_private_1b.aws_subnet.subnet",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2d8a0b95a476699",
            "route_table_id": "rtb-078a038ca3de4eaa4",
            "subnet_id": "subnet-07bc2aeb8127a9575"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc_internet_gateway.aws_internet_gateway.internet_gateway",
            "module.vpc_route_table_public.aws_route_table.route_table",
            "module.vpc_subnet_public_1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07035dfb3d733febc",
            "route_table_id": "rtb-0a5bf99917771b2fe",
            "subnet_id": "subnet-0764fa88e3791e8ae"
          },
          "dependencies": [
            "module.eip_nat_gateway_1a.aws_eip.eip",
            "module.vpc.aws_vpc.vpc",
            "module.vpc_nat_gateway_private_1a.aws_nat_gateway.nat_gateway",
            "module.vpc_route_table_private_1a.aws_route_table.route_table",
            "module.vpc_subnet_private_1a.aws_subnet.subnet",
            "module.vpc_subnet_public_1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:security-group/sg-000424855aee6b72f",
            "description": "ALB Security Group that allows traffic from whitelisted ips",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "The egress rule allows all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000424855aee6b72f",
            "ingress": [
              {
                "cidr_blocks": [
                  "82.17.235.49/32"
                ],
                "description": "Ingress rule that allows traffic from whitelisted ips",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rabbitmq-sg-alb-20200420094014224400000001",
            "name_prefix": "rabbitmq-sg-alb-",
            "owner_id": "074912011001",
            "revoke_rules_on_delete": true,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:security-group/sg-06566651568ebaf8b",
            "description": "EC2 Security Group that allows traffic from whitelisted ips",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "The egress rule allows all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06566651568ebaf8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Ingress rule that allows traffic from whitelisted ips",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rabbitmq-sg-ec2-20200420094014233100000002",
            "name_prefix": "rabbitmq-sg-ec2-",
            "owner_id": "074912011001",
            "revoke_rules_on_delete": true,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_public_1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:subnet/subnet-07e4b3998eec84571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-07e4b3998eec84571",
            "map_public_ip_on_launch": false,
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-subnet-public-1a",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_private_1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:subnet/subnet-0f738b73821a022a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.192.0/18",
            "id": "subnet-0f738b73821a022a0",
            "map_public_ip_on_launch": false,
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-subnet-private-1b",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_public_1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:subnet/subnet-07bc2aeb8127a9575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-07bc2aeb8127a9575",
            "map_public_ip_on_launch": false,
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-subnet-public-1b",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_private_1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:subnet/subnet-0764fa88e3791e8ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-0764fa88e3791e8ae",
            "map_public_ip_on_launch": false,
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-subnet-private-1a",
              "Owner": "Platform Team",
              "Project": "POC"
            },
            "vpc_id": "vpc-05fa54f10e8dfa9f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws.services",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:074912011001:vpc/vpc-05fa54f10e8dfa9f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2a5179636b6a987",
            "default_route_table_id": "rtb-06aaf51d7c6d47ddd",
            "default_security_group_id": "sg-0c5311e81f5a3811c",
            "dhcp_options_id": "dopt-5caabe37",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05fa54f10e8dfa9f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06aaf51d7c6d47ddd",
            "owner_id": "074912011001",
            "tags": {
              "BusinessUnit": "Platform Team",
              "Environment": "prod",
              "Name": "rabbitmq-vpc",
              "Owner": "Platform Team",
              "Project": "POC"
            }
          }
        }
      ]
    }
  ]
}